k8s/homefs.biz/apps/grafana/grafana-external-service.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: grafana-external
  namespace: default
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`grafana.pyldin601.dev`)
      services:
        - kind: Service
          name: docker-swarm-service
          port: https
          scheme: https
  tls:
    certResolver: default
